# npm_

./: .env.example  30_STEP_PLAN_COMPLETION.md  ALL_GAPS_FIXED_SUMMARY.md  API_IMPLEMENTATION_ANALYSIS.md  ARCHITECTURE.md  App.tsx  COMPLETE_ANALYSIS_SUMMARY.md  COMPLETE_DOCUMENTATION.md  COMPREHENSIVE_GAP_ANALYSIS.md  CRITICAL_FIXES_APPLIED.md  DEEPER_GAP_ANALYSIS.md  DEEP_GAP_ANALYSIS.md  DETAILED_ANALYSIS.md  FEATURE_ADDITIONS.py  FEATURE_INVENTORY.md  FIXES_APPLIED.md  FUNCTION_FLOW_DIAGRAM.md  MISSING_FEATURES_IMPLEMENTATION.py  MISSING_FEATURES_INTEGRATION_GUIDE.md  PROGRESSION_MAP.md  README.md  TEST_REPORT.md  VERIFICATION_AND_NEXT_STEPS.md  analyze_features.py  deep_analysis.py  enhanced_cache.py  fix_classes.py  index.css  index.html  init_managers.txt  metadata.json  migration_schema.txt  npm.py  npm2.py  npm_analyzer.py  npm_analyzer_UPGRADED.py  npm_consolidated.py  npm_consolidated_README.md  npm_consolidated_example.py  npm_discovery_gui.py  (+11 more)
components/: ConfirmationModal.tsx  HueSlider.tsx  LoadingSpinner.tsx  SettingsModal.tsx  Sidebar.tsx
components/modals/: AdminActionsModal.tsx  AnalysisPanel.tsx  DatabaseSetupModal.tsx  DependenciesModal.tsx  PackageDetailModal.tsx  SupabaseModal.tsx
components/projects/: ProjectsView.tsx  SettingsModal.tsx  WelcomeScreen.tsx
components/search/: SearchBar.tsx  SearchResults.tsx  SearchView.tsx
components/shared/: CodeViewer.tsx  ConfirmationModal.tsx  FilterHeader.tsx  Header.tsx  LoadingSpinner.tsx  PackageCard.tsx  ReadmeRenderer.tsx  SchemaSetupOverlay.tsx  SupabaseStatusIndicator.tsx  Tabs.tsx
components/shared/icons/: CheckIcon.tsx  ChevronDoubleLeftIcon.tsx  ChevronDoubleRightIcon.tsx  ChevronRightIcon.tsx  ClipboardCheckIcon.tsx  ClipboardIcon.tsx  ClockIcon.tsx  CodeIcon.tsx  CogIcon.tsx  CollectionIcon.tsx  CubeIcon.tsx  DocumentIcon.tsx  DotsVerticalIcon.tsx  ExclamationIcon.tsx  EyeSlashIcon.tsx  FolderIcon.tsx  GithubIcon.tsx  HistoryIcon.tsx  IssueOpenedIcon.tsx  (+16 more)
hooks/: useDebounce.ts  useLocalStorage.ts
npm/: __main__.py  cli.py  config.py
npm/api/: __init__.py  libraries_io.py  npm_registry.py  unpkg.py
npm/models/: __init__.py
npm/services/: __init__.py  cache.py  discovery.py  downloader.py
npm/ui/: __init__.py  app.py  keyboard.py  settings.py  theme.py  widgets.py
npm/utils/: http.py
services/: geminiService.ts  searchService.ts  supabaseService.ts
src/npm_discovery/: __main__.py  cli.py  config.py
src/npm_discovery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/integration/: test_discovery.py
tests/unit/: test_api_clients.py  test_cache.py  test_config.py  test_http.py  test_models.py
utils/: asyncUtils.ts  colorStyles.ts  colorUtils.ts  formatters.ts  languageUtils.ts
(+15 files in other folders)
